--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!--  Top Toolbar  -->
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/top_toolbar"
         android:layout_width="match_parent"
@@ -27,15 +28,17 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <!--  Main Content  -->
     <include
         layout="@layout/content_main"
 
-        app:layout_constraintTop_toTopOf="@id/top_toolbar"
+        app:layout_constraintTop_toBottomOf="@id/top_toolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
         />
 
+    <!--  Bottom Navigation Bar  -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
