--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,8 +29,20 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <!--  Main Content  -->
-    <include
-        layout="@layout/content_main"
+<!--    <include-->
+<!--        layout="@layout/content_main"-->
+
+<!--        app:layout_constraintTop_toBottomOf="@id/top_toolbar"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"-->
+<!--        />-->
+
+    <FrameLayout
+        android:id="@+id/flFragment"
+
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
 
         app:layout_constraintTop_toBottomOf="@id/top_toolbar"
         app:layout_constraintStart_toStartOf="parent"
