--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="dark_blue">#FF2F3D88</color>
     <color name="black">#FF000000</color>
     <color name="white_smoke">#FFF5F5F5</color>
+    <color name="pink">#ED709A</color>
 </resources>
