--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -1,9 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <TextView
+        android:id="@+id/userName"
+
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+
+        tools:text="sachinreddy96"
+        android:textSize="16sp"
+        android:textAlignment="center"
+
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/newsImage"
+        />
+
 
     <ImageView
         android:id="@+id/newsImage"
@@ -13,11 +34,10 @@
         android:src="@drawable/stock_image"
         app:layout_constraintDimensionRatio="1:1"
 
-        android:layout_marginTop="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
 
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/userName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
@@ -36,8 +56,8 @@
 
         <ToggleButton
             android:id="@+id/likeButton"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
 
             android:textOn=""
             android:textOff=""
@@ -57,7 +77,7 @@
             android:layout_height="match_parent"
 
             tools:text="37"
-            android:textSize="20sp"
+            android:textSize="16sp"
 
             android:layout_marginStart="20dp"
 
