--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -6,16 +6,34 @@
     android:layout_height="match_parent"
     tools:context=".fragment.SecondFragment">
 
-    <TextView
-        android:id="@+id/secondTextView"
+    <ImageView
+        android:id="@+id/uploadImage"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+
+        app:layout_constraintDimensionRatio="1:1"
+        android:layout_margin="40dp"
+
+        android:src="@drawable/stock_image"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <Button
+        android:id="@+id/uploadActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_second_fragment"
 
+        android:text="@string/select"
+        app:layout_constraintVertical_bias="0.7"
+
+        app:layout_constraintTop_toBottomOf="@+id/uploadImage"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
