--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -2,19 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/nav_home"
+        android:id="@+id/FirstFragment"
         android:icon="@drawable/ic_home"
         android:title="@string/home"
         />
 
     <item
-        android:id="@+id/nav_upload"
+        android:id="@+id/SecondFragment"
         android:icon="@drawable/ic_upload"
         android:title="@string/upload"
         />
 
     <item
-        android:id="@+id/nav_profile"
+        android:id="@+id/ThirdFragment"
         android:icon="@drawable/ic_profile"
         android:title="@string/profile"
         />
